# clSPH

./: .gitignore  LICENSE  Makefile  README.md  animate.gp  bphys.h  fluidParams.h  hash.h  meson.build  particle.h  plot.gp  sph  sph.c  sph.cl
shaders/: particle.frag  vert.vert
src/: bphys.c  bphys.h  cl.c  cl.h  cl_types.h  fluid_params.c  fluid_params.h  hash.h  log.c  log.h  particle.h  sdl.c  sdl.h  sph.c  sph.cl  sph.h
